isFillingFullscreen was not always correct. Because: 1. scrolled to top detection was broken in fullscreen view 2. isFillingFullscreen was set to early in the updateSizes method

--- a/src/styles/youtube-ambilight.scss
+++ b/src/styles/youtube-ambilight.scss
@@ -31,9 +31,11 @@
 
 .ambilight__top {
   position: absolute;
+  z-index: 2147483647;
   top: 0;
   width: 100%;
   height: 1px;
+  pointer-events: none;
 }
 
 /* Workaround for issue with OffScreenCanvas */
